# vico-ai-agent

./: .env.example  .gitignore  .vicorc.json  LICENSE  README.md  pyproject.toml  setup.sh
doc/: BUG_FIX_TEMPLATE.md  FEATURE_REQUEST_TEMPLATE.md  README.md  agent-flow.mmd  agent-sequence.mmd  agent-skill-plan.md  architecture.md
src/vico/: __init__.py  config.py
src/vico/cli/: __init__.py  approval.py  cli.py  commands.py  permission_box.py  render_utils.py  renderer.py  repl.py  session.py  spinner.py  theme.py  tool_format.py
src/vico/config/: __init__.py  loader.py
src/vico/config/types/: __init__.py  config.py
src/vico/core/: __init__.py  agent_loop.py  context_manager.py  permission_controller.py  prompt_loader.py  skill_provider.py  skill_runtime.py  system_prompt.py  tool_executor.py  types.py
src/vico/core/types/: __init__.py  agent.py  callbacks.py  messages.py
src/vico/exceptions/: __init__.py
src/vico/llm/: __init__.py  base.py  llm_factory.py  models.py
src/vico/llm/providers/: __init__.py  base.py  deepseek.py  mimo.py
src/vico/llm/types/: __init__.py  request.py  stream.py
src/vico/prompts/: Agent.md  User.md  Vico.md  environment.md  error_recovery.md  planning.md  response_format.md  safety.md  tools.md
src/vico/skills/: __init__.py  loader.py
src/vico/skills/types/: __init__.py  meta.py
src/vico/tools/: __init__.py  activate_skill.py  base.py  bash.py  edit.py  execute_command.py  path_safety.py  read.py  read_file.py  registry.py  search.py  write.py
src/vico/tools/types/: __init__.py  call.py  definition.py  execution.py
src/vico/utils/: __init__.py  terminal.py  text_utils.py
