[project]
name = "vico-ai-agent"
dynamic = ["version"]
description = "An all-powerful AI agent assistant, armed with imagination"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "chenweichao", email = "chenweichao@kuaishou.com" }]
keywords = ["ai", "agent", "cli", "llm", "coding-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.50.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "anyio>=4.4.0",
    "prompt-toolkit>=3.0.0",
    "jinja2>=3.1.0",
]

[project.urls]
Homepage = "https://github.com/VicoCheney/vico-ai-agent"
Repository = "https://github.com/VicoCheney/vico-ai-agent"
"Bug Tracker" = "https://github.com/VicoCheney/vico-ai-agent/issues"

[project.scripts]
vico = "vico.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vico"]

[tool.hatch.version]
path = "src/vico/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]  # line-too-long is handled by formatter, not linter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
